# 2_neural_networks_cpp

./: .gitignore  CMakeLists.txt  README.md
.github/: setup.sh
.github/workflows/: build-and-run-tests.yaml
build_cpu/: CMakeLists.txt
source/: net.h  train_net.cpp
tests/: test_net.cpp
trained_net/: README.md
